# $Id$

2007-05-05	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added ability to set
	View class.

2007-05-02	Anton E. Lebedevich

	* main/Flow/PartViewer.class.php: getModel() added.

2007-05-01	Sergey S. Sergeev

	* meta/builders/BaseBuilder.class.php: return query if setters are
	empty.

2007-04-30	Konstantin V. Arkhipov

	* 0.10.0 released.

2007-04-28	Dmitry Pismenny

	* core/Form/Filters/PCREFilter.class.php: limit added.

2007-04-27	Dmitry Pismenny

	* core/base/Session.class.php: minor styling.

	* core/base/Session.class.php: add getName() and getId() methods.

2007-04-22	Konstantin V. Arkhipov

	* meta/bin/build.php: --no-color switch implemented.

2007-04-22	Konstantin V. Arkhipov

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-04-21	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: added dao-like behaviour on
	throwing ONF-exception controlled by setSilent() method; silent by
	default.

	* main/DAOs/: getListByCriteria() finally removed.

	* main/DAOs/GenericDAO.class.php: getById() now stores cached objects
	in identity map.

2007-04-17	Denis M. Gabaidulin

	* main/Utils/ClassUtils.class.php: dtoObject2xml() added.
	It's convert dto objects to xml.

	* meta/classes/MetaClass.class.php: toComplexType() now support
	xsd maxLength attribute (simple size restriction for base types).

2007-04-16	Denis M. Gabaidulin

	* meta/bin/meta2xsd.php: --withoutSoap parameter added
	to generate standalone xml-schema document.

2007-04-14	Konstantin V. Arkhipov

	* core/OSQL/DBTable.class.php: now respect's column size during diff,
	if any.

2007-04-14	Anton E. Lebedevich
	
	* main/Flow/MultiPrefixPhpViewResolver.class.php: added resolver for
	multiple prefixes.

2007-04-13	Denis M. Gabaidulin

	* main/Criteria/Criteria.class.php: dropProjection() added.

	* meta/classes/MetaConfiguration.class.php: toXsd()
	make correct xml-document now.

2007-04-12	Anton E. Lebedevich
