@@ -1,5 +1,9 @@
 # $Id$
 
+2007-05-08	Anton E. Lebedevich
+	* core/Form/Filters/RemoveNewlineFilter.class.php: RemoveNewlineFilter
+	added.
+
 2007-05-05	Dmitry E. Demidov
 
 	* main/Flow/MultiPrefixPhpViewResolver.class.php: added ability to set
